# BotNet

./: CMakeLists.txt  README.md  build  clean  install  run  uninstall
app/: cli.cpp  main.cpp
include/mancala/: AIPlayer.hpp  Board.hpp  Game.hpp  GameOutcome.hpp  Move.hpp  Player.hpp  SimpleTextView.hpp  UserPlayer.hpp  View.hpp
mancala/: CMakeLists.txt  README.md  main.cpp
mancala/include/: Board.hpp
mancala/models/: AIPlayer.cpp  Board.cpp  Game.cpp  UserPlayer.cpp
mancala/views/: SimpleTextView.cpp
src/: CMakeLists.txt  CMakeLists.txt.gtest  cli.cpp  cli.hpp  config.h.in  main.cpp
src/mancala/: CMakeLists.txt
src/mancala/include/: Board.hpp  GameOutcome.hpp
src/mancala/models/: Board.cpp  Board.hpp  GameOutcome.hpp
tests/: CMakeLists.txt  test.cpp
tests/mancala/: BoardTests.cpp
